# Hypothetical-Language-Assembler

./: .gitignore  CMakeLists.txt  LICENSE  README SIMULADOR.txt  README.md  build.sh  buildAndRun.sh  testNumArgs.sh
include/: stringUtils.h  utils.h
lib/args/: CMakeLists.txt
lib/args/include/: args.h
lib/args/src/: args.cpp
lib/assembler/: CMakeLists.txt
lib/assembler/include/: assembler.h  stringUtils.h  symboltable.h
lib/assembler/src/: assembler.cpp  stringUtils.cpp  symboltable.cpp
lib/assemblerErrors/: CMakeLists.txt
lib/assemblerErrors/include/: assemblerErrors.h
lib/assemblerErrors/src/: assemblerErrors.cpp
lib/libExampleA/: CMakeLists.txt
lib/libExampleA/include/: args.h
lib/libExampleA/src/: args.cpp
lib/libExampleB/: CMakeLists.txt
lib/simulator/: CMakeLists.txt
lib/simulator/include/: simulator.h
lib/simulator/src/: simulator.cpp
src/: main.cpp  utils.cpp
tests/: bin.asm  binComments.asm  binDataLast.asm  binRepeatedLabels.asm  binWrongArgsNum.asm
